[package]
name = "ddclient"
version = "0.1.0"
authors = ["Jesse B. Hannah <jesse@jbhannah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = "0.10.1"
tokio = { version = "0.2", features = ["macros"] }
