[package]
name = "ddclient"
version = "0.1.0"
authors = ["Jesse B. Hannah <jesse@jbhannah.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1.24"
clap = "2.33.0"
cloudflare = { git = "https://github.com/jbhannah/cloudflare-rs", branch = "list-zones" }
failure = "0.1.6"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
