[package]
name = "ddclient"
version = "0.1.2"
authors = ["Jesse B. Hannah <jesse@jbhannah.net>"]
edition = "2018"
description = "Dynamic DNS service client"
license = "MIT"
homepage = "https://github.com/jbhannah/ddclient"
repository = "https://github.com/jbhannah/ddclient"
documentation = "https://docs.rs/ddclient"

[dependencies]
async-trait = "0.1.33"
clap = "2.33.0"
cloudflare = { git = "https://github.com/jbhannah/cloudflare-rs", branch = "dnscontent-partialeq" }
failure = "0.1.7"
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "1.12", features = ["macros"] }
